# paws3

./: .gitignore  README.md  paws3_debug_workbench.ipynb  pyproject.toml
docs/: architecture.md  index.md
examples/: README.md
examples/configs/: bilevel_stub.yaml  minimal.yaml  ws3_fhops.yaml
examples/minimal/data/: demand.csv  strata.csv  yields.csv
src/paws3/adapters/: fhops_adapter.py  util.py  ws3_adapter.py
src/paws3/cli/: commands.py
src/paws3/core/: config.py  datatypes.py  interfaces.py  sim.py
src/paws3/io/: csv_loader.py  loaders.py  readers.py
src/paws3/models/: agent.py  bilevel.py  principal.py  solvers.py  types.py
src/paws3/plugins/: agent_fhops.py  principal_ws3.py  registry.py
tests/: test_import.py
